--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_imstall:
-  - docker build -r rszczesiak/docker-react -f Dockerfile.dev .
+  - docker build -t rszczesiak/docker-react -f Dockerfile.dev .
 
 script:
   - docker run rszczesiak/docker-react npm run test -- --coverage
